# assert-struct

./: .gitignore  CHANGELOG.md  CLAUDE.md  CURRENT_STATUS.md  Cargo.toml  DESIGN_IMPROVED_ERRORS.md  ERRORS.md  LICENSE  README.md  TODO.md  debug_nested  rust-toolchain.toml  test_closure_approaches  test_no_annotations  test_repeated_fields  test_repeated_fields.rs
assert-struct/: CHANGELOG.md  Cargo.toml  LLM.txt
assert-struct-macros/: CHANGELOG.md  Cargo.toml
assert-struct-macros/src/: expand.rs  lib.rs  parse.rs  pattern.rs
assert-struct-macros/src/expand/: nodes.rs
assert-struct-macros/src/pattern/: closure.rs  comparison.rs  enum_pattern.rs  field.rs  map.rs  range.rs  regex.rs  rest.rs  set.rs  simple.rs  slice.rs  string.rs  struct_pattern.rs  tuple.rs  wildcard.rs
assert-struct/examples/: nested.rs
assert-struct/src/: error.rs  error_document.rs  error_v2.rs  lib.rs  regex_cache.rs
assert-struct/tests/: auto_deref_simple.rs  await_support.rs  basic.rs  closures.rs  comparison.rs  complex_chaining.rs  complex_expressions.rs  edge_cases_formatting.rs  enum_struct_patterns.rs  enums.rs  equality.rs  equality_compile_constraints.rs  equality_pattern_test.rs  equality_struct.rs  error_message_format.rs  error_messages.rs  fancy_error_comprehensive.rs  fancy_error_format.rs  field_operations.rs  index_operations.rs  like_advanced.rs  like_macro_integration.rs  like_trait.rs  line_numbers.rs  macro_expansion_debug.rs  maps.rs  method_calls.rs  multiple_failures.rs  nested.rs  nested_deep.rs  nested_field_access.rs  non_struct_root.rs  option.rs  option_advanced.rs  option_nested.rs  ranges.rs  regex.rs  regex_paths.rs  repeated_field_patterns.rs  sets.rs  (+13 more)
assert-struct/tests/basic_errors/: age_mismatch.rs  field_mismatch.rs  simple_field_mismatch.rs  tuple_field_mismatch.rs  vec_mismatch.rs
assert-struct/tests/closures_errors/: basic_closure_failure.rs
assert-struct/tests/comparison_errors/: comparison_pattern.rs  greater_than_failure.rs  less_than_failure.rs
assert-struct/tests/compile_fail/: closure_type_error_span.rs  closure_type_error_span.stderr  equality_with_rest_pattern.rs  equality_with_rest_pattern.stderr  like_trait_span_issue.rs  like_trait_span_issue.stderr  map_pattern_on_non_map.rs  map_pattern_on_non_map.stderr  map_pattern_on_primitive.rs  map_pattern_on_primitive.stderr  map_pattern_on_vec.rs  map_pattern_on_vec.stderr  nested_type_error_span.rs  nested_type_error_span.stderr  simple_span_test.rs  simple_span_test.stderr  span_propagation_await.stderr  span_propagation_complex.stderr  span_propagation_index.rs  span_propagation_index.stderr  span_propagation_method.rs  span_propagation_method.stderr  type_error_span.rs  type_error_span.stderr  type_mismatch.stderr  wildcard_struct_missing_rest.rs  wildcard_struct_missing_rest.stderr
assert-struct/tests/enum_struct_patterns_errors/: enum_struct_comparison_failure.rs  enum_struct_field_mismatch.rs  enum_struct_multiple_field_failures.rs  enum_struct_variant_nested_mismatch.rs  enum_variant_wrong_struct.rs  nested_option_enum_struct_failure.rs
assert-struct/tests/enums_errors/: enum_variant.rs  enum_variant_mismatch.rs  result_expected_ok_got_err.rs  tuple_enum_field_mismatch.rs
assert-struct/tests/equality_errors/: equality_pattern.rs
assert-struct/tests/error_messages/: enum_variant.rs  equality_pattern.rs  nested_comparison.rs  option_with_comparison.rs  range_pattern.rs  regex_pattern.rs  slice_pattern.rs
assert-struct/tests/field_operations_errors/: deref_field_mismatch.rs  deref_with_comparison.rs  enum_with_deref_mismatch.rs  mixed_operations_mismatch.rs  multiple_deref_mismatch.rs  nested_deref_mismatch.rs  slice_with_deref_mismatch.rs  tuple_indexed_deref_mismatch.rs
assert-struct/tests/tuples_errors/: mod.rs  (+10 more)
(+183 files in other folders)
