[package]
name = "assert-struct"
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]
edition = "2024"
rust-version = "1.85"
description = "A procedural macro for ergonomic structural assertions in tests"
documentation = "https://docs.rs/assert-struct"
homepage = "https://github.com/carllerche/assert-struct"
repository = "https://github.com/carllerche/assert-struct"
readme = "README.md"
license = "MIT"
keywords = ["testing", "assert", "macro", "test", "struct"]
categories = ["development-tools::testing", "development-tools"]
exclude = [
    ".github/",
    "tests/",
    ".gitignore",
]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }
