[workspace]
members = ["assert-struct", "assert-struct-macros"]
resolver = "2"

[workspace.package]
authors = ["Carl Lerche <me@carllerche.com>"]
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/carllerche/assert-struct"
homepage = "https://github.com/carllerche/assert-struct"

[workspace.dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
regex = "1.12"