[package]
name = "assert-struct-macros"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Procedural macro implementation for assert-struct"
documentation = "https://docs.rs/assert-struct"

[lib]
proc-macro = true

[features]
default = ["regex"]
regex = ["dep:regex"]

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
regex = { workspace = true, optional = true }