[package]
name = "assert-struct"
version = "0.3.1"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "A procedural macro for ergonomic structural assertions in tests"
documentation = "https://docs.rs/assert-struct"
readme = "../README.md"
keywords = ["testing", "assert", "macro", "test", "struct"]
categories = ["development-tools::testing", "development-tools"]
exclude = [
    ".github/",
    "tests/",
    ".gitignore",
]

[features]
default = ["regex"]
regex = ["assert-struct-macros/regex", "dep:regex"]

[dependencies]
assert-struct-macros = { version = "0.3.1", path = "../assert-struct-macros" }
annotate-snippets = "0.12"
regex = { workspace = true, optional = true }

[dev-dependencies]
trybuild = "1.0"
insta = "1.46"
tokio = { version = "1.0", features = ["full"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }